codepkg/objects/Integration_Config__mdt.object
<CustomObject>
    <description>Metadata used for storing integration configurations</description>
    <fields>
        <fullName>Algo__c</fullName>
        <label>Algo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Base_URL__c</fullName>
        <label>Auth Base URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auth_Type__c</fullName>
        <label>Auth Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                    <default>true</default>
                    <label>Basic</label>
                </value>
                <value>
                    <fullName>JWT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cert__c</fullName>
        <label>cert</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Key__c</fullName>
        <label>Integration Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Key__c</fullName>
        <label>Private Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Key__c</fullName>
        <label>Public Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aud__c</fullName>
        <label>aud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkcs8__c</fullName>
        <label>pkcs8</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Integration Config</label>
    <pluralLabel>Integration Configs</pluralLabel>
</CustomObject>